docs/7.55/md/abennews-46-debugger.md
  

* * *

AS ABAP Release 755, ©Copyright 2020 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennews.htm) →  [Changes in Releases 4.xx](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennews-4.htm) →  [Changes in Release 4.6A](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennews-46a.htm) → 

Debugger in Release 4.6A

In Release 4.6A, the following functions were added to ABAP Debugger:

[1\. Editing strings](#!ABAP_MODIFICATION_1@1@)
[2\. Enhancements in ABAP Objects](#!ABAP_MODIFICATION_2@2@)
[3\. Other](#!ABAP_MODIFICATION_3@3@)

Modification 1

Editing Strings

The display of the data types string and xstring can now be scrolled. The cursor can be positioned on the string by double-clicking it. It is also possible to declare strings as watchpoints.

Modification 2

Enhancements in ABAP Objects

[Static attributes](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenstatic_attribute_glosry.htm "Glossary Entry") and handlers of [static events](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenstatic_event_glosry.htm "Glossary Entry") can now be displayed without specifying an instance. It is also possible to find all references to a specific object. The same applies to data references.

Modification 3

Other

The 'System Debugging' setting is saved too when breakpoints are saved. Furthermore, the new 'Last [Short Dump](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenshort_dump_glosry.htm "Glossary Entry")' button makes it possible to display the last runtime error created. This can also be done using the transaction LAST\_SHORTDUMP.